--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,23 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-    <!-- The first thing in any HTML file should be the charset -->
     <meta charset="utf-8">
-    <!-- Make the page mobile compatible -->
+
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Allow installing the app to the homescreen -->
     <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <title>Todolist</title>
+
+    <style>
+      body {
+        font-family: 'Roboto', sans-serif;
+        margin: 0px;
+      }
+    </style>
+
   </head>
   <body>
     <!-- The app hooks into this div -->
