Add some nice coloring to due dates

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,12 @@
         font-family: 'Roboto', sans-serif;
         margin: 0px;
       }
+      .red {
+        color: #D50000 !important;
+      }
+      .blue {
+        color: #2196F3 !important;
+      }
     </style>
 
   </head>
