--- a/app/index.html
+++ b/app/index.html
@@ -2,25 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Allow installing the app to the homescreen -->
-    <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css">
     <title>Todolist</title>
-
-    <style>
-      body {
-        font-family: 'Roboto', sans-serif;
-        margin: 0px;
-      }
-    </style>
   </head>
   <body>
-    <!-- The app hooks into this div -->
     <div id="app"></div>
-    <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically includes all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this HTML file. Don't add any assets here! (Check out webpackconfig.js if you want to know more) -->
   </body>
 </html>
